# test_outputs

./: README.md  pyproject.toml  run.py  tasks.py
.github/workflows/: update-snapshots.yml
src/: main.py
tests/: test_snapshots.py
tests/snapshots/Case01/ExpectedOutputs/: df.csv
tests/snapshots/Case01/Inputs/: settings.json
